--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"babel-core": "^6.26.0",
 		"babel-eslint": "^8.2.2",
 		"babel-loader": "^7.1.3",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-polyfill": "^6.26.0",
 		"babel-preset-env": "^1.6.1",
 		"babel-preset-react": "^6.24.1",
 		"eslint": "^4.18.1",
@@ -35,9 +38,15 @@
 	"dependencies": {
 		"axios": "^0.18.0",
 		"babel-register": "^6.26.0",
+		"material-ui": "^0.20.0",
 		"prop-types": "^15.6.1",
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
-		"react-router-dom": "^4.2.2"
+		"react-redux": "^5.0.7",
+		"react-redux-form": "^1.16.5",
+		"react-router-dom": "^4.2.2",
+		"redux": "^3.7.2",
+		"redux-form": "^7.2.3",
+		"redux-thunk": "^2.2.0"
 	}
 }
