--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"eslint-plugin-react": "^7.7.0",
 		"flow-bin": "^0.66.0",
 		"prettier": "^1.11.0",
+		"react-portal": "^4.1.3",
 		"webpack": "^3.10.0",
 		"webpack-dev-server": "^2.9.7"
 	},
@@ -44,6 +45,7 @@
 		"react-dom": "^16.2.0",
 		"react-redux": "^5.0.7",
 		"react-redux-form": "^1.16.5",
+		"react-responsive-modal": "^2.0.1",
 		"react-router-dom": "^4.2.2",
 		"redux": "^3.7.2",
 		"redux-form": "^7.2.3",
