--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-polyfill": "^6.26.0",
 		"babel-preset-env": "^1.6.1",
+		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
+		"babel-preset-stage-0": "^6.24.1",
 		"eslint": "^4.18.1",
 		"eslint-config-airbnb": "^16.1.0",
 		"eslint-config-prettier": "^2.9.0",
