--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"react-router-dom": "^4.2.2",
 		"redux": "^3.7.2",
 		"redux-form": "^7.2.3",
-		"redux-thunk": "^2.2.0"
+		"redux-thunk": "^2.2.0",
+		"styled-components": "^3.1.6"
 	}
 }
