--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
 		"eslint-plugin-react": "^7.7.0",
 		"flow-bin": "^0.66.0",
 		"prettier": "^1.11.1",
-		"react-portal": "^4.1.3",
 		"webpack": "^3.10.0",
 		"webpack-dev-server": "^2.9.7"
 	},
@@ -52,6 +51,7 @@
 		"redux": "^3.7.2",
 		"redux-form": "^7.2.3",
 		"redux-thunk": "^2.2.0",
-		"styled-components": "^3.1.6"
+		"styled-components": "^3.1.6",
+		"react-portal": "^4.1.3"
 	}
 }
